2013-05-17  Andy Buckley  <andy.buckley@cern.ch>

	* Treat a request for PID = 0 as if PID 21 (gluon) had been
	requested. Useful for backward compatibility, but also just for
	convenience since it's much easier to just loop from -6 to 6 than
	to have to skip 0 and add 21 as a special case.

2013-05-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding x/Q2/Q min/max (virtual) functions to the PDF
	interface. Default implementations use metadata keys only.

	* Adding in-place filling functions for map and vector PDF value
	containers, on the PDF interface.

2013-05-11  Andy Buckley  <andy.buckley@cern.ch>

	* configure.ac, src/Info.cc: Re-adding yaml-cpp 0.3.x support via
	version detection in the configure script.

2013-05-07  Andy Buckley  <andy.buckley@cern.ch>

	* src/Info.cc: Converting the YAML reading to use the yaml-cpp v0.5.x API.

	* Tweaking and fixing tests and build config.

2013-04-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a PDF set usage example (uses C++11 for now, for fun!)

2013-04-11  Andy Buckley  <andy.buckley@cern.ch>

	* Rename of wrapper dir from cython -> python (reflect the target,
	not the way of achieving it).

	* Python extension build env fix

2013-04-10  Andy Buckley  <andy.buckley@cern.ch>

	* Improving creategrids to use xmin and qmin/max when dumping
	LHpdf files and to allow a manual override for LHgrid
	dumps. CTEQ6L1 looking *almost* publicly acceptable now.

	* examples/: Resurrecting old testpdf.cc as an example (used by Doxygen)

	* migration/: Using compatibility stuff to improve dumpv5v6.cc

	* Adding LHAPDF_MAJOR_VERSION macro and examples/compatibility.cc

	* AUTHORS list tweak since James added substantial code for Fortran compatibility.

	* Adding copyright etc. notices to each file header.

	* Adding LHAPDF.h convenience header.

2013-04-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fix ctypes handling in creategrids

	* Adding ignoring (and writing) of a 3rd grid block line, to